compass-demo/ingress/env/qa/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: compass-ingress
spec:
  # tls:
  # - hosts:
  #   - compass-qa-k8s.qualix.internal.ms
  #   secretName: qualix-tls
  rules:
  - host: "compass-qa-k8s.qualix.internal.ms"
    http:
      paths:
      - path: /portal/(.*)
        pathType: Prefix
        backend:
          service:
            name: compass-backend
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: compass-frontend
            port:
              number: 80
